--- a/notebooks_v3/Lab 2.v3.ipynb
+++ b/notebooks_v3/Lab 2.v3.ipynb
@@ -155,7 +155,7 @@
       "        return RadiceBisectionSearch(x, a, y)\n",
       "    \n",
       "def RadiceBisection(x):\n",
-      "    return RadiceBinarySearch(x, 1, x)"
+      "    return RadiceBisectionSearch(x, 1, x)"
      ],
      "language": "python",
      "metadata": {},
