--- a/notebooks/Lab 5.ipynb
+++ b/notebooks/Lab 5.ipynb
@@ -378,6 +378,17 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "**ESERCIZIO 5.3:** Rappresentare il grafico della funzione tangente nell'intervallo $[-pi]"
+   ]
   }
  ],
  "metadata": {
