Aggiunto Lab 6, corretto Lab vecchi

--- a/notebooks/Lab 2.ipynb
+++ b/notebooks/Lab 2.ipynb
@@ -206,7 +206,7 @@
     "\n",
     "**ESEMPIO:** ricerca della radice quadrata di 2.\n",
     "\n",
-    "| Valore Tentavo $y$ | Quoziente $x/y$ | Media tra $y$ e $x/y$ |\n",
+    "| Valore Tentativo $y$ | Quoziente $x/y$ | Media tra $y$ e $x/y$ |\n",
     "|    :--:   |    :--:    |    :--:    |\n",
     "|  1  |  2/1  | (1+2)/2=1.5 | \n",
     "|  1.5  |  2/1.5=1.3333  | (1.3333+1.5)/2=1.4167 |\n",
