--- a/notebooks_v3/Introduzione ai notebooks.v3.ipynb
+++ b/notebooks_v3/Introduzione ai notebooks.v3.ipynb
@@ -33,7 +33,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -44,7 +44,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -54,8 +54,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1, 3)\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -70,11 +78,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Interactive namespace is empty.\n"
+        "a\t x\t \n"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -85,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -100,11 +108,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Interactive namespace is empty.\n"
+        "a\t \n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -140,7 +148,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -172,6 +180,34 @@
       }
      ],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def P():\n",
+      "    return P()\n",
+      "P()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "RecursionError",
+       "evalue": "maximum recursion depth exceeded",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-7-a392e54bf72a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-7-a392e54bf72a>\u001b[0m in \u001b[0;36mP\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[1;32mreturn\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "... last 1 frames repeated, from the frame below ...\n",
+        "\u001b[0;32m<ipython-input-7-a392e54bf72a>\u001b[0m in \u001b[0;36mP\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[1;32mreturn\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mP\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
