Corretti numerosi errori di ortografia

--- a/notebooks/Lab 1.ipynb
+++ b/notebooks/Lab 1.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si noti come in questo caso, per queste semplici procedure numeriche che corrispondono agli operatori aritmetici, viene implicitamente usata una notazione chiamata **postfix**. Importanto la libreria `operator` è possibile esprimere le stesse espressioni in notazione **prefix**:"
+    "Si noti come in questo caso, per queste semplici procedure numeriche che corrispondono agli operatori aritmetici, viene implicitamente usata una notazione chiamata **postfix**. Importando la libreria `operator` è possibile esprimere le stesse espressioni in notazione **prefix**:"
    ]
   },
   {
@@ -101,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "# Importa tutte le procedure (funzioni) definite nel module \"operator\"\n",
+    "# Importa tutte le procedure (funzioni) definite nel modulo \"operator\"\n",
     "from operator import *"
    ]
   },
@@ -304,7 +304,7 @@
    "source": [
     "In questo caso, l'interprete del linguaggio, ha prima valutato l'espressione `2*pi*raggio`, e dopo ha assegnato il **valore** ottenuto dalla valutazione dell'**espressione** alla variabile di nome `circonferenza`.\n",
     "\n",
-    "In questo caso, l'operatore di assegnamento `=` rappresenta il più semplice meccanismo di astrazione, perchè permette di dare un **nome** al risultato di operazioni più complesse. \n",
+    "In questo caso, l'operatore di assegnamento `=` rappresenta il più semplice meccanismo di astrazione, perché permette di dare un **nome** al risultato di operazioni più complesse. \n",
     "\n",
     "In pratica, qualsiasi programma viene costruito partendo dalla costruzione, passo passo, di oggetti computazionali via via più complessi.\n",
     "\n",
@@ -337,7 +337,7 @@
     "\n",
     "1.2 Applica la procedura indicata dalla sottoespressioni più a sinistra (l'operatore), agli argomenti che sono i valori della sottoespressione (gli operandi).\n",
     "    \n",
-    "Si noti come questa per valutare un'operazione composta, per prima cosa dobbiamo eseguire il processo di valutazione a ogni elementi dell'espressione composta. Quindi la regola di valutazione di un'espressione è intrinsicamente **RICORSIVA**, ovvero include come uno dei suoi passi la chiamata a se stessa.\n",
+    "Si noti come questa per valutare un'operazione composta, per prima cosa dobbiamo eseguire il processo di valutazione a ogni elementi dell'espressione composta. Quindi la regola di valutazione di un'espressione è intrinsecamente **RICORSIVA**, ovvero include come uno dei suoi passi la chiamata a se stessa.\n",
     "\n",
     "NOTA: mostrare alla lavagna un *recursion tree* con l'espressione precedente."
    ]
@@ -416,7 +416,7 @@
     "\n",
     "Si noti come sono apparse la prima parole chiave riservata del linguaggio: **def**. Inoltre, `<Nome>` è il nome che noi vogliamo associare alla procedure che stiamo definendo, e i `<parametri formali>` (chiamati argomenti della procedura) sono le variabili che non appartengono direttamente al *working eniviroment* (ovvero alla MEMORIA dell'interprete), ma sono \"visibili\" solo internamente alla procedura in cui sono definite.\n",
     "\n",
-    "Se torniamo all'esempio delle definzione di una procedura per l'elevamento al quadrato, possiamo scrivere:"
+    "Se torniamo all'esempio delle definizione di una procedura per l'elevamento al quadrato, possiamo scrivere:"
    ]
   },
   {
@@ -531,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ESEMPIO**: considera la segunte espressione composta:"
+    "**ESEMPIO**: considera la seguente espressione composta:"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**DOMANDA**: con gli elementi del linguaggio sin qui introddoti, possiamo definire una funzione `ValoreAssoluto(x)`, ovvero \n",
+    "**DOMANDA**: con gli elementi del linguaggio sin qui introdotti, possiamo definire una funzione `ValoreAssoluto(x)`, ovvero \n",
     "\n",
     "$|x| = x$ se $x \\geq 0$, e $|x|=-x$ se $x < 0$? "
    ]
