--- a/notebooks_v3/Lab 1.v3.ipynb
+++ b/notebooks_v3/Lab 1.v3.ipynb
@@ -114,14 +114,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Si noti come in questo caso, per queste semplici procedure numeriche che corrispondono agli operatori aritmetici, viene implicitamente usata una notazione chiamata **postfix**. Importanto la libreria `operator` \u00e8 possibile esprimere le stesse espressioni in notazione **prefix**:"
+      "Si noti come in questo caso, per queste semplici procedure numeriche che corrispondono agli operatori aritmetici, viene implicitamente usata una notazione chiamata **postfix**. Importando la libreria `operator` \u00e8 possibile esprimere le stesse espressioni in notazione **prefix**:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "# Importa tutte le procedure (funzioni) definite nel module \"operator\"\n",
+      "# Importa tutte le procedure (funzioni) definite nel modulo \"operator\"\n",
       "from operator import *"
      ],
      "language": "python",
@@ -328,7 +328,7 @@
      "source": [
       "In questo caso, l'interprete del linguaggio, ha prima valutato l'espressione `2*pi*raggio`, e dopo ha assegnato il **valore** ottenuto dalla valutazione dell'**espressione** alla variabile di nome `circonferenza`.\n",
       "\n",
-      "In questo caso, l'operatore di assegnamento `=` rappresenta il pi\u00f9 semplice meccanismo di astrazione, perch\u00e8 permette di dare un **nome** al risultato di operazioni pi\u00f9 complesse. \n",
+      "In questo caso, l'operatore di assegnamento `=` rappresenta il pi\u00f9 semplice meccanismo di astrazione, perch\u00e9 permette di dare un **nome** al risultato di operazioni pi\u00f9 complesse. \n",
       "\n",
       "In pratica, qualsiasi programma viene costruito partendo dalla costruzione, passo passo, di oggetti computazionali via via pi\u00f9 complessi.\n",
       "\n",
@@ -361,7 +361,7 @@
       "\n",
       "1.2 Applica la procedura indicata dalla sottoespressioni pi\u00f9 a sinistra (l'operatore), agli argomenti che sono i valori della sottoespressione (gli operandi).\n",
       "    \n",
-      "Si noti come questa per valutare un'operazione composta, per prima cosa dobbiamo eseguire il processo di valutazione a ogni elementi dell'espressione composta. Quindi la regola di valutazione di un'espressione \u00e8 intrinsicamente **RICORSIVA**, ovvero include come uno dei suoi passi la chiamata a se stessa.\n",
+      "Si noti come questa per valutare un'operazione composta, per prima cosa dobbiamo eseguire il processo di valutazione a ogni elementi dell'espressione composta. Quindi la regola di valutazione di un'espressione \u00e8 intrinsecamente **RICORSIVA**, ovvero include come uno dei suoi passi la chiamata a se stessa.\n",
       "\n",
       "NOTA: mostrare alla lavagna un *recursion tree* con l'espressione precedente."
      ]
@@ -440,7 +440,7 @@
       "\n",
       "Si noti come sono apparse la prima parole chiave riservata del linguaggio: **def**. Inoltre, `<Nome>` \u00e8 il nome che noi vogliamo associare alla procedure che stiamo definendo, e i `<parametri formali>` (chiamati argomenti della procedura) sono le variabili che non appartengono direttamente al *working eniviroment* (ovvero alla MEMORIA dell'interprete), ma sono \"visibili\" solo internamente alla procedura in cui sono definite.\n",
       "\n",
-      "Se torniamo all'esempio delle definzione di una procedura per l'elevamento al quadrato, possiamo scrivere:"
+      "Se torniamo all'esempio delle definizione di una procedura per l'elevamento al quadrato, possiamo scrivere:"
      ]
     },
     {
@@ -555,7 +555,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**ESEMPIO**: considera la segunte espressione composta:"
+      "**ESEMPIO**: considera la seguente espressione composta:"
      ]
     },
     {
@@ -594,7 +594,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**DOMANDA**: con gli elementi del linguaggio sin qui introddoti, possiamo definire una funzione `ValoreAssoluto(x)`, ovvero \n",
+      "**DOMANDA**: con gli elementi del linguaggio sin qui introdotti, possiamo definire una funzione `ValoreAssoluto(x)`, ovvero \n",
       "\n",
       "$|x| = x$ se $x \\geq 0$, e $|x|=-x$ se $x < 0$? "
      ]
