--- a/notebooks_v3/Lab 2.v3.ipynb
+++ b/notebooks_v3/Lab 2.v3.ipynb
@@ -29,7 +29,7 @@
      "metadata": {},
      "source": [
       "## Esempio: Calcolo delle radici quadrata tramite il metodo di Newton\n",
-      "Le procedure che abbiamo introdotto sino ad ora sono essenzialmente delle **funzioni mathematiche**. Queste specificano un valore che viene calcolato a partire da uno o pi\u00f9 parametri. Tuttavia, le procedure definite al calcolatore si differenziano in quanto devono essere anche **efficienti**.\n",
+      "Le procedure che abbiamo introdotto sino ad ora sono essenzialmente delle **funzioni matematiche**. Queste specificano un valore che viene calcolato a partire da uno o pi\u00f9 parametri. Tuttavia, le procedure definite al calcolatore si differenziano in quanto devono essere anche **efficienti**.\n",
       "\n",
       "Prendiamo per esempio la definizione seguente:\n",
       "\n",
@@ -45,7 +45,7 @@
       "### Enumerazione esaustiva (forza bruta)\n",
       "Se ci limitiamo a considerare i numeri interi, potremmo utilizzare la definizione precedente per trovare la radice quadrata per enumerazione esaustiva. Se dobbiamo trovare la radice quadrata di $x$, possiamo provare tutti i numeri da $x$ a 1, e provare ogni volta se il numero \"*tentativo*\" \u00e8 il quadrato dell'altro. \n",
       "\n",
-      "**ESERCIZIO 2.1**: scrivere una procedura (funzione) che prende in input un numero intero maggiore o uguale a 1, e prova tutti i numeri da $x$ a 1 e se trova la radice quadrata esatta la restituiesce, altrimenti restituisce $-1$."
+      "**ESERCIZIO 2.1**: scrivere una procedura (funzione) che prende in input un numero intero maggiore o uguale a 1, e prova tutti i numeri da $x$ a 1 e se trova la radice quadrata esatta la restituisce, altrimenti restituisce $-1$."
      ]
     },
     {
@@ -133,7 +133,7 @@
      "metadata": {},
      "source": [
       "### Ricerca per bisezione\n",
-      "Potremmo cercare di migliorare la procedura precendete tenendo conto del fatto che i numeri che stiamo controllando sono ordinati, in ordine decrescente. Quindi potremmo evitare di controllare tutti i numeri, uno alla volta, ma potremmo cercare di fare dei \"salti\".\n",
+      "Potremmo cercare di migliorare la procedura precedente tenendo conto del fatto che i numeri che stiamo controllando sono ordinati, in ordine decrescente. Quindi potremmo evitare di controllare tutti i numeri, uno alla volta, ma potremmo cercare di fare dei \"salti\".\n",
       "\n",
       "**ESERCIZIO 2.2**: scrivere una procedura che, per trovare la radice quadrata di un numero, ogni volta divide l'intervallo di ricerca in due parti uguali, e continua ad esplorare solo la parte in cui effettivamente si pu\u00f2 trovare la radice cercata."
      ]
