--- a/notebooks_v3/Lab 6.v3.ipynb
+++ b/notebooks_v3/Lab 6.v3.ipynb
@@ -39,7 +39,7 @@
       "\n",
       "$$k_1 f(n) \\leq R(n) \\leq k_2 f(n)$$\n",
       "\n",
-      "per valori sufficientementi grandi di $n$.\n",
+      "per valori sufficientemente grandi di $n$.\n",
       "\n",
       "Per esempio, con i processi lineari ricorsivi per calcolare il fattoriale di $n$ descritto nel **Lab 4**, il numero di passi necessari cresce linearmente con l'input $n$. Quindi, i passi richiesti dal processo cresce come $\\Theta(n)$. Abbiamo visto che anche lo spazio cresce come $\\Theta(n)$.\n",
       "\n",
