--- a/notebooks/Lab 5.ipynb
+++ b/notebooks/Lab 5.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vediamo prima a cosa serve la funzione [linspace(a, b, n)](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.linspace.html). Questa funzione serve per ottenere una sequenza di $n$ numeri equidistanziati nell'intervallo $[a,b]$. Per esempio:"
+    "Vediamo prima a cosa serve la funzione [linspace(a, b, n)](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.linspace.html). Questa funzione serve per ottenere una sequenza di $n$ numeri equi distanziati nell'intervallo $[a,b]$. Per esempio:"
    ]
   },
   {
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "D = linspace(-2,2,1000) # 1000 punti equidistanziati nell'intervallo [-2,2]"
+    "D = linspace(-2,2,1000) # 1000 punti equi distanziati nell'intervallo [-2,2]"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se invece di rapresentare la funzione $f(x)=x^2$ volessimo rappresentare la funzione $f(x)=x^3$, definita nello stesso dominio, ci basta calcolare la sequenza di numeri `Y`:"
+    "Se invece di rappresentare la funzione $f(x)=x^2$ volessimo rappresentare la funzione $f(x)=x^3$, definita nello stesso dominio, ci basta calcolare la sequenza di numeri `Y`:"
    ]
   },
   {
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Di solito quello che si vuole fare è di sovrapporre sullo stesso grafico funzioni tra di loro simili, ma che sono definite da parametri diversi. Se consideriamo la funzione potenza $f(x)=x^n$ per $x \\in D$, potremmo voler dare una rappresentazione grafica dell quattro funzioni che si ottengono per $n \\in \\{1,2,3,4\\}$. Questo può essere ottenuto in python richiamando più volte la funzione `plot(x,y)`, prima di chiamare la funzione `show()`.\n",
+    "Di solito quello che si vuole fare è di sovrapporre sullo stesso grafico funzioni tra di loro simili, ma che sono definite da parametri diversi. Se consideriamo la funzione potenza $f(x)=x^n$ per $x \\in D$, potremmo voler dare una rappresentazione grafica delle quattro funzioni che si ottengono per $n \\in \\{1,2,3,4\\}$. Questo può essere ottenuto in python richiamando più volte la funzione `plot(x,y)`, prima di chiamare la funzione `show()`.\n",
     "\n",
     "**ESEMPIO:** (diverse funzioni sullo stesso plot)"
    ]
@@ -383,7 +383,7 @@
    "metadata": {},
    "source": [
     "## Funzioni trigonometriche\n",
-    "Per poter rappresentare delle funzioni trigonometriche, è necessario utilizzare una terza libreria di Python (abbiamo già usato `numpy` e `matplotlib`), chiamata `math`, che definisce tutte le costanti (e.g. $\\pi$ e $e$) e le funzioni matematiche (e.g. $\\sin(x)$, $\\log(x)$, $e^x$, sqrt$(x)=\\sqrt(x)$, ...) di uso comune. Per la lista completa di funzioni implementate, consulare la [documentazione della libreria *math*](https://docs.python.org/3/library/math.html).\n",
+    "Per poter rappresentare delle funzioni trigonometriche, è necessario utilizzare una terza libreria di Python (abbiamo già usato `numpy` e `matplotlib`), chiamata `math`, che definisce tutte le costanti (e.g. $\\pi$ e $e$) e le funzioni matematiche (e.g. $\\sin(x)$, $\\log(x)$, $e^x$, sqrt$(x)=\\sqrt(x)$, ...) di uso comune. Per la lista completa di funzioni implementate, consultare la [documentazione della libreria *math*](https://docs.python.org/3/library/math.html).\n",
     "\n",
     "**ESEMPIO:** plot della funzione $f(x)=a\\,sin(x)$, per $a=0.5,1,3$, nel dominio $[0,2 \\pi]$."
    ]
