--- a/notebooks_v3/Lab 4.v3.ipynb
+++ b/notebooks_v3/Lab 4.v3.ipynb
@@ -159,13 +159,13 @@
       "\n",
       "Si provi a confrontare questo schema di calcolo rispetto al precedente.\n",
       "\n",
-      "A prima vista non sembrano troppo diversi: entrambi calcolano $5!$. Entrambe le procedure richiedono un numero di passi proporzionale al numero $n$. Entrambe le procedure eseguono la stessa seguenza di prodotti, ottenendo gli stessi prodotti parziali. Tuttavia, visualizzando l'evoluzione del processo di calcolo, otteniamo chiaramente una \"forma\" diversa per i due processi.\n",
+      "A prima vista non sembrano troppo diversi: entrambi calcolano $5!$. Entrambe le procedure richiedono un numero di passi proporzionale al numero $n$. Entrambe le procedure eseguono la stessa sequenza di prodotti, ottenendo gli stessi prodotti parziali. Tuttavia, visualizzando l'evoluzione del processo di calcolo, otteniamo chiaramente una \"forma\" diversa per i due processi.\n",
       "\n",
       "Si consideri il primo processo. Procedendo con il modello sostitutivo, otteniamo prima una sequenza di espansioni, seguita da una sequenza di contrazioni. Le espansioni si ottengono mentre il processo costruisce una sequenza di operazioni **deferred** (in questo caso la sequenza di moltiplicazioni). Le contrazioni avvengono quando le operazioni **deferred** sono effettivamente calcolate. \n",
       "\n",
       "Questo tipo di processo, caratterizzato da una sequenze di operazioni deffered, viene chiamato **PROCESSO RICORSIVO**. \n",
       "\n",
-      "Questo processo richiede che l'interprete tenga memoria delle operazioni che deve eseguire dopo, durante la sequenza di contrazioni. Nel caso del calcolo di $n!$, la lunghezza della sequenza di operazioni deferred, e quindi la quantit\u00e0 di informazioni da mantenere in memodira, \u00e8 lineare nell'input $n$. Si parla quindi di **PROCESSO RICORSIVO LINEARE**.\n",
+      "Questo processo richiede che l'interprete tenga memoria delle operazioni che deve eseguire dopo, durante la sequenza di contrazioni. Nel caso del calcolo di $n!$, la lunghezza della sequenza di operazioni deferred, e quindi la quantit\u00e0 di informazioni da mantenere in memoria, \u00e8 lineare nell'input $n$. Si parla quindi di **PROCESSO RICORSIVO LINEARE**.\n",
       "\n",
       "Al contrario, il secondo processo, quello della procedura `FactorialI(n)` non si espande e non si contrae. Ad ogni passo, gli unici valori di cui dobbiamo tener traccia sono le tre variabili `accumulator`, `counter`, e `n`. Questo viene chiamato un **PROCESSO ITERATIVO**. In generale, un processo iterativo pu\u00f2 descritto da un numero finito di *variabili di stato*, insieme con una regola che descrive come le variabili di stato dovrebbero essere aggiornate quando il processo passo da uno stato all'altro, e dovrebbe avere un test d'arresto (i.e., un predicato condizionale `if`) che specifica sotto quali condizioni il processo dovrebbe terminare. Nel calcolare $n!$, il numero di passo richiesto cresce linearmente con $n$. Tale processo viene chiamato un **PROCESSO ITERATIVO LINEARE**.\n",
       "\n",
@@ -177,7 +177,7 @@
       "Tuttavia, quando descriviamo un processo che segue uno schema linearmente ricorsivo, stiamo parlando di come il processo evolve, non della sintassi che viene usata per scrivere la procedura. Pu\u00f2 creare confusione il fatto che noi diciamo che una procedura ricorsiva, come ad esempio `FactorialI(n)`, genera un processo iterativo. In ogni caso il processo \u00e8 iterativo: il suo stato \u00e8 descritto completamente dalle sue tre variabili di stato, e l'interprete deve tener traccia solo di quelle tre variabili per poter eseguire il processo.\n",
       "\n",
       "Il motivo principale che genera questa confusione, \u00e8 che l'implementazione attuale di molti di linguaggi di programmazione comuni (C, Java, e lo stesso Python) sono implementati in modo tale che l'esecuzione di ogni chiamata ricorsiva consuma una quantit\u00e0 di memoria che cresce linearmente con il numero di chiamate ricorsive alla stessa procedura, anche se il processo stesso \u00e8 iterativo.\n",
-      "L'implementazione di altri linguaggi di programmazione (per esempio, il LISP e Haskell) \u00e8 in grado di distinguere le chiamate ricorsive a processi iterativi, ed \u00e8 in grado di eseguire tale processo usando una quantit\u00e0 di memoria che dipende solo dal numero di variabili di stato. L'implementazion di un linguaggio con questa propriet\u00e0 viene chiamato **tail-recursive**. \n",
+      "L'implementazione di altri linguaggi di programmazione (per esempio, il LISP e Haskell) \u00e8 in grado di distinguere le chiamate ricorsive a processi iterativi, ed \u00e8 in grado di eseguire tale processo usando una quantit\u00e0 di memoria che dipende solo dal numero di variabili di stato. L'Implementazione di un linguaggio con questa propriet\u00e0 viene chiamato **tail-recursive**. \n",
       "\n",
       "## Ricorsione ad albero\n",
       "Un altro schema ricorrente di calcolo \u00e8 la ricorsione ad albero. Si consideri per esempio la successione dei numeri di Fibonacci, in cui ogni numero \u00e8 la somma dei due numeri precedenti:\n",
@@ -213,8 +213,8 @@
      "source": [
       "Si consideri lo schema di calcolo di tale funzione (FARE ALLA LAVAGNA). Si noti che il processo stesso evolve come un albero: ad ogni nodo il processo di ramifica in due sottoprocessi, tranne che ai nodi foglia. Questo \u00e8 dovuto al fatto che la procedura chiama se stessa due volte per ogni invocazione.\n",
       "\n",
-      "Questa procedura per calcolare i numeri di Fibonacci \u00e8 un ottimo esempio di struttura ad albero, ma \u00e8 un pessimo modo di calcolare i numeri di Fibonacci. Per rendersi conto di quanto sia inefficiente, si consideri che questo processo usa un numero di passi che cresce esponenzialmente con l'input. Tuttavia, lo spazione richiesto cresce solo linearmente con l'input, in quanto dobbiamo tener traccia dei nodi al di sotto del nodo corrente a qualsiasi momento del processo. \n",
-      "In generale, il numerodi passi richiesto da un processo ricorsivo ad albero sar\u00e0 proporzionale al numero di nodi dell'albero, mentre lo spazio richiesto sar\u00e0 proporzionale alla profondit\u00e0 massima dell'albero.\n",
+      "Questa procedura per calcolare i numeri di Fibonacci \u00e8 un ottimo esempio di struttura ad albero, ma \u00e8 un pessimo modo di calcolare i numeri di Fibonacci. Per rendersi conto di quanto sia inefficiente, si consideri che questo processo usa un numero di passi che cresce esponenzialmente con l'input. Tuttavia, lo spazio richiesto cresce solo linearmente con l'input, in quanto dobbiamo tener traccia dei nodi al di sotto del nodo corrente a qualsiasi momento del processo. \n",
+      "In generale, il numero di passi richiesto da un processo ricorsivo ad albero sar\u00e0 proporzionale al numero di nodi dell'albero, mentre lo spazio richiesto sar\u00e0 proporzionale alla profondit\u00e0 massima dell'albero.\n",
       "\n",
       "Il calcolo dei numeri di Fibonacci pu\u00f2 essere formulato anche come un processo iterativo. L'idea \u00e8 di usare una coppia di numeri $a$ e $b$, inizializzati con $Fib(1)=1$ e $Fib(0)=0$, e di applicare ripetutamente le trasformazioni simultanee:\n",
       "\n",
@@ -304,7 +304,7 @@
       "            = 2\n",
       "```\n",
       "\n",
-      "**ESERCIZIO 4.3**: Scrivere una procedura che calcola il massimo comun divisore usando l'algoritmo di Euclide (per cacolare il resto di una divisione tra due numeri interi si usa l'operatore modulo `%`)."
+      "**ESERCIZIO 4.3**: Scrivere una procedura che calcola il massimo comun divisore usando l'algoritmo di Euclide (per calcolare il resto di una divisione tra due numeri interi si usa l'operatore modulo `%`)."
      ]
     },
     {
