--- a/notebooks_v3/Lab 5.v3.ipynb
+++ b/notebooks_v3/Lab 5.v3.ipynb
@@ -63,7 +63,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Vediamo prima a cosa serve la funzione [linspace(a, b, n)](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.linspace.html). Questa funzione serve per ottenere una sequenza di $n$ numeri equidistanziati nell'intervallo $[a,b]$. Per esempio:"
+      "Vediamo prima a cosa serve la funzione [linspace(a, b, n)](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.linspace.html). Questa funzione serve per ottenere una sequenza di $n$ numeri equi distanziati nell'intervallo $[a,b]$. Per esempio:"
      ]
     },
     {
@@ -204,7 +204,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "D = linspace(-2,2,1000) # 1000 punti equidistanziati nell'intervallo [-2,2]"
+      "D = linspace(-2,2,1000) # 1000 punti equi distanziati nell'intervallo [-2,2]"
      ],
      "language": "python",
      "metadata": {},
@@ -277,7 +277,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Se invece di rapresentare la funzione $f(x)=x^2$ volessimo rappresentare la funzione $f(x)=x^3$, definita nello stesso dominio, ci basta calcolare la sequenza di numeri `Y`:"
+      "Se invece di rappresentare la funzione $f(x)=x^2$ volessimo rappresentare la funzione $f(x)=x^3$, definita nello stesso dominio, ci basta calcolare la sequenza di numeri `Y`:"
      ]
     },
     {
@@ -318,7 +318,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Di solito quello che si vuole fare \u00e8 di sovrapporre sullo stesso grafico funzioni tra di loro simili, ma che sono definite da parametri diversi. Se consideriamo la funzione potenza $f(x)=x^n$ per $x \\in D$, potremmo voler dare una rappresentazione grafica dell quattro funzioni che si ottengono per $n \\in \\{1,2,3,4\\}$. Questo pu\u00f2 essere ottenuto in python richiamando pi\u00f9 volte la funzione `plot(x,y)`, prima di chiamare la funzione `show()`.\n",
+      "Di solito quello che si vuole fare \u00e8 di sovrapporre sullo stesso grafico funzioni tra di loro simili, ma che sono definite da parametri diversi. Se consideriamo la funzione potenza $f(x)=x^n$ per $x \\in D$, potremmo voler dare una rappresentazione grafica delle quattro funzioni che si ottengono per $n \\in \\{1,2,3,4\\}$. Questo pu\u00f2 essere ottenuto in python richiamando pi\u00f9 volte la funzione `plot(x,y)`, prima di chiamare la funzione `show()`.\n",
       "\n",
       "**ESEMPIO:** (diverse funzioni sullo stesso plot)"
      ]
@@ -397,7 +397,7 @@
      "metadata": {},
      "source": [
       "## Funzioni trigonometriche\n",
-      "Per poter rappresentare delle funzioni trigonometriche, \u00e8 necessario utilizzare una terza libreria di Python (abbiamo gi\u00e0 usato `numpy` e `matplotlib`), chiamata `math`, che definisce tutte le costanti (e.g. $\\pi$ e $e$) e le funzioni matematiche (e.g. $\\sin(x)$, $\\log(x)$, $e^x$, sqrt$(x)=\\sqrt(x)$, ...) di uso comune. Per la lista completa di funzioni implementate, consulare la [documentazione della libreria *math*](https://docs.python.org/3/library/math.html).\n",
+      "Per poter rappresentare delle funzioni trigonometriche, \u00e8 necessario utilizzare una terza libreria di Python (abbiamo gi\u00e0 usato `numpy` e `matplotlib`), chiamata `math`, che definisce tutte le costanti (e.g. $\\pi$ e $e$) e le funzioni matematiche (e.g. $\\sin(x)$, $\\log(x)$, $e^x$, sqrt$(x)=\\sqrt(x)$, ...) di uso comune. Per la lista completa di funzioni implementate, consultare la [documentazione della libreria *math*](https://docs.python.org/3/library/math.html).\n",
       "\n",
       "**ESEMPIO:** plot della funzione $f(x)=a\\,sin(x)$, per $a=0.5,1,3$, nel dominio $[0,2 \\pi]$."
      ]
