Aggiunte soluzione delle seconda esercitazione. Corretti alcuni errori in Lab 6 e 7.

--- a/latex/esercitazioni/es_2.tex
+++ b/latex/esercitazioni/es_2.tex
@@ -2,6 +2,8 @@
 
 \usepackage[margin=2cm]{geometry}
 
+\usepackage{amsmath}
+\usepackage{url}
 
 \usepackage{collectbox}
 
@@ -66,11 +68,9 @@ scrivere la procedura che genera un processo iterativo lineare.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \item In maniera analoga alla funzione {\tt Sommatoria}, si può definire una funzione {\tt Produttoria}
 che restituisce i valori dei prodotti di una funzione valutata in un insieme di punti definiti da un dato intervallo $[a,b]$:
-
 $$
 	\prod_{n=a}^b f(n) = f(a)\cdot ... \cdot f(b)
 $$
-
 Scrivere tale funzione e mostrare come sia possibile usarla per calcolare $n!$
 
 \mybox{15}{4.5}
