--- a/notebooks/Lab 7.ipynb
+++ b/notebooks/Lab 7.ipynb
@@ -245,7 +245,7 @@
     "Ora che abbiamo la funzione `Sommatoria`, possiamo usarla per formulare anche altri concetti. Per esempio, l'integrale definito di una funzione $f$ tra i limiti $a$ e $b$, può essere approssimato numericamente usando la formula:\n",
     "\n",
     "$$\n",
-    "    \\int_a^b = [f(a+dx/2) + f(a+dx+dx/2) + f(1+ 2dx + dx/2)+ ...]dx\n",
+    "    \\int_a^b f(x)\\, dx = [f(a+dx/2) + f(a+dx/2+dx) + f(a+ dx/2 + 2dx )+ ...]dx\n",
     "$$\n",
     "\n",
     "per valori piccoli di $dx$. Questo può essere implementato direttamente in una procedura come segue:"
