Aggiunte dopo la lezione del 26/10/17

--- a/notebooks/Lab 9.ipynb
+++ b/notebooks/Lab 9.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,22 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2), (3, 4))\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[0])"
    ]
@@ -61,13 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, (2, (3, (4, None))))\n"
+     ]
+    }
+   ],
    "source": [
-    "Ls = (1, (2, (3, (4, None))))"
+    "Ls = (1, (2, (3, (4, None))))\n",
+    "print(Ls)"
    ]
   },
   {
@@ -86,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -102,13 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, (2, (3, (4, (5, None)))))\n"
+     ]
+    }
+   ],
    "source": [
-    "print(MakeList(5))"
+    "Ls = MakeList(5)\n",
+    "print(Ls)"
    ]
   },
   {
@@ -122,11 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "head: 1\n",
+      "tail: (2, (3, (4, (5, None))))\n"
+     ]
+    }
+   ],
    "source": [
     "def Head(Ls):\n",
     "    return Ls[0]\n",
@@ -151,31 +194,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Completare"
+    "def Nth(Ls, i):\n",
+    "    if i == 0:\n",
+    "        return Head(Ls)\n",
+    "    return Nth(Tail(Ls), i-1)\n",
+    "\n",
+    "print(Nth(Ls, 3))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ESERCIZIO 9.2:** Scrivere una procedura che calcola la lunghezza di una lista."
+    "**ESERCIZIO 9.2:** Scrivere una procedura chiamata `Length(Ls)`che calcoli la lunghezza di una lista."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Completare"
+    "def Length(Ls):\n",
+    "    def LengthI(Ls, x):\n",
+    "        if Ls == None:\n",
+    "            return x\n",
+    "        return LengthI(Tail(Ls), x+1)\n",
+    "    return LengthI(Ls, 0)\n",
+    "    \n",
+    "print(Length(Ls))"
    ]
   },
   {
