--- a/notebooks_v3/Lab 8.v3.ipynb
+++ b/notebooks_v3/Lab 8.v3.ipynb
@@ -38,14 +38,63 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "7/6 == 1/2+2/3"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "False"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "7/6"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "1.1666666666666667"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "1/2+2/3"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "text": [
+        "1.1666666666666665"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -182,7 +231,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -208,7 +257,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -218,8 +267,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(3, 4)\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -238,7 +295,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -249,8 +306,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3\n",
+        "4\n"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -260,8 +326,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -271,8 +345,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -293,13 +375,13 @@
      "collapsed": true,
      "input": [
       "def MakeQ(n, d):\n",
-      "    return (n, d)\n",
+      "    return MakePair(n, d)\n",
       "\n",
       "def Num(x):\n",
-      "    return x[0]\n",
+      "    return x(1)\n",
       "\n",
       "def Den(x):\n",
-      "    return x[1]\n",
+      "    return x(2)\n",
       "\n",
       "# Per avere un \"pretty print\"\n",
       "def PrintQ(x):\n",
@@ -308,7 +390,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -327,8 +409,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "7/6\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -345,8 +435,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "6/9\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -359,7 +457,9 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "# COMPLETARE"
+      "def MakeQ(n, d):\n",
+      "    mcd = MCD(n,d)\n",
+      "    return (n/mcd, d/mcd)"
      ],
      "language": "python",
      "metadata": {},
@@ -377,7 +477,13 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "# COMPLETARE"
+      "def Num(x):\n",
+      "    mcd = MCD(x[0],x[1])\n",
+      "    return x[0]/mcd\n",
+      "\n",
+      "def Den(x):\n",
+      "    mcd = MCD(x[0],x[1])\n",
+      "    return x[1]/mcd"
      ],
      "language": "python",
      "metadata": {},
@@ -437,7 +543,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -449,8 +555,36 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2\n",
+        "3\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a(MakePair)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Errore: in una coppia sono presenti solo due elementi.\n"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
