--- a/notebooks_v3/Lab 9.v3.ipynb
+++ b/notebooks_v3/Lab 9.v3.ipynb
@@ -45,7 +45,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -55,8 +55,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "((1, 2), (3, 4))\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -66,8 +74,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1, 2)\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -85,14 +101,23 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
-      "Ls = (1, (2, (3, (4, None))))"
+      "Ls = (1, (2, (3, (4, None))))\n",
+      "print(Ls)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1, (2, (3, (4, None))))\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -122,18 +147,27 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": null
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(MakeList(5))"
+      "Ls = MakeList(5)\n",
+      "print(Ls)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(1, (2, (3, (4, (5, None)))))\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -160,8 +194,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "head: 1\n",
+        "tail: (2, (3, (4, (5, None))))\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -175,32 +218,60 @@
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
-      "# Completare"
+      "def Nth(Ls, i):\n",
+      "    if i == 0:\n",
+      "        return Head(Ls)\n",
+      "    return Nth(Tail(Ls), i-1)\n",
+      "\n",
+      "print(Nth(Ls, 3))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**ESERCIZIO 9.2:** Scrivere una procedura che calcola la lunghezza di una lista."
+      "**ESERCIZIO 9.2:** Scrivere una procedura chiamata `Length(Ls)`che calcoli la lunghezza di una lista."
      ]
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
-      "# Completare"
+      "def Length(Ls):\n",
+      "    def LengthI(Ls, x):\n",
+      "        if Ls == None:\n",
+      "            return x\n",
+      "        return LengthI(Tail(Ls), x+1)\n",
+      "    return LengthI(Ls, 0)\n",
+      "    \n",
+      "print(Length(Ls))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "5\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
