--- a/notebooks/Lab 8.ipynb
+++ b/notebooks/Lab 8.ipynb
@@ -14,13 +14,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "7/6 == 1/2+2/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1666666666666667"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7/6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1666666666666665"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/2+2/3"
    ]
   },
   {
@@ -138,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -188,11 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
@@ -206,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -218,11 +281,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(b)\n",
     "print(c)"
@@ -230,22 +302,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[0])  # Primo elemento della coppia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "print(a[1])  # Secondo elemento della coppia"
    ]
@@ -266,20 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def MakeQ(n, d):\n",
-    "    return (n, d)\n",
+    "    return MakePair(n, d)\n",
     "\n",
     "def Num(x):\n",
-    "    return x[0]\n",
+    "    return x(1)\n",
     "\n",
     "def Den(x):\n",
-    "    return x[1]\n",
+    "    return x(2)\n",
     "\n",
     "# Per avere un \"pretty print\"\n",
     "def PrintQ(x):\n",
@@ -295,11 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/6\n"
+     ]
+    }
+   ],
    "source": [
     "a = MakeQ(1, 2)\n",
     "b = MakeQ(2, 3)\n",
@@ -315,11 +411,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/9\n"
+     ]
+    }
+   ],
    "source": [
     "PrintQ(AddQ(MakeQ(1,3), MakeQ(1,3)))"
    ]
@@ -339,7 +443,9 @@
    },
    "outputs": [],
    "source": [
-    "# COMPLETARE"
+    "def MakeQ(n, d):\n",
+    "    mcd = MCD(n,d)\n",
+    "    return (n/mcd, d/mcd)"
    ]
   },
   {
@@ -357,7 +463,13 @@
    },
    "outputs": [],
    "source": [
-    "# COMPLETARE"
+    "def Num(x):\n",
+    "    mcd = MCD(x[0],x[1])\n",
+    "    return x[0]/mcd\n",
+    "\n",
+    "def Den(x):\n",
+    "    mcd = MCD(x[0],x[1])\n",
+    "    return x[1]/mcd"
    ]
   },
   {
@@ -399,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -417,15 +529,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "a = MakePair(2,3)\n",
     "print(a(1))\n",
     "print(a(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Errore: in una coppia sono presenti solo due elementi.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a(MakePair)"
    ]
   },
   {
